# weather-lsa-control-main

./: # Code Citations.md  .copilot_bootstrap.md  .coverage  .coverage.Macmini.47601.Xjycewax  .coverage.Macmini.52612.XFYuANtx  .dockerignore  .editorconfig  .env.example  .env.template  .eslintrc.json  .gitattributes  .gitignore  .markdownlint.json  .mcp.json  .mcp.json.bak  .pre-commit-config.yaml  .prettierignore  A11Y_TODO.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECRET_SCANNER.md  SUGGESTIONS.md  TYPECOVERAGE.md  docker-compose.yml  e2e-runner.mjs  load_env.zsh  notify-mcp.sh  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  pyproject.toml  pyrightconfig.json  pytest.ini  real.playwright.config.ts  requirements-dev.txt  requirements.freeze.txt  (+7 more)
.github/workflows/: ci.yml  e2e.yml  hf-mcp-offline-check.yml  release.yml  tests.yml
.mcp/: servers.conf
.streamlit/: config.toml
apps/api/: Dockerfile  README.md  pyproject.toml
apps/api/app/: main.py  pages.py  tiles.py
apps/web/: Dockerfile  next.config.mjs  package.json  tsconfig.json
backup/: requirements.freeze.txt
deploy/: README.md
deploy/k8s/: configmap-example.yaml  cronjob-weather.yaml  cronjob-worker.yaml  deployment.yaml  pvc.yaml  secret-example.yaml  service.yaml
docs/: ARCHITECTURE.md  LOGGING.md  MCP_ENABLE.md  MCP_PROGRESS.md  MCP_SLINT.md  PAGES_CLEANUP.md  RUNBOOK.md  TESTING.md  TESTING_HELPERS.md
mcp/: figma-server-http.js  figma-server.js  sentry-server-http.js
migrate/: pages-inventory.json
ops/: memory.sqlite
playwright-report-real/: index.html
real-e2e/: map.real.spec.ts
scripts/: ensure_py_tools.sh  env_path.sh  firecrawl_crawl_extract.sh  real_mode_e2e.sh  real_mode_start.sh  run_map.sh  run_pytest.sh  sentry_rest_probe.sh  stop_map.sh  tavily_usage.sh
src/: __main__.py  auth.py  db.py  health.py  lsa_client.py  lsa_reporting.py  metrics.py  notifier.py  observability.py  ratelimit.py  rules.py  secrets_manager.py  tracing.py  weather_monitor.py  worker.py
tests/: conftest.py  map.spec.ts  map.spec.ts.bak  test_ads_service.py  test_audit_export_path.py  test_chaos_load.py  test_circuit_breaker.py  test_filters_and_radius.py  test_health_readiness_smoke.py  test_hf_tools.py  test_http_client_cache.py  test_layers_schema.py  test_logging_hygiene.py  test_lsa_guards.py  test_map_imports.py  test_post_wrapper.py  test_quiet_hours.py  test_region_mappings_toggle.py  test_rule_golden.py  test_rules.py  test_utils.py  test_utils_headers.py  test_weather_matching.py  test_worker_verify_rollback.py
tools/: apify_discovery_log.mjs  apify_http_probe.mjs  apify_search_details.mjs  apify_search_plan.mjs  cache_translate_models.py  check_requests_timeouts.py  clarity_probe.py  firecrawl_discovery_log.mjs  health_check.py  hf_http_probe.mjs  hf_mcp_server.py  install_os_tools_mac.sh  inventory_streamlit_pages.py  mcp_models.py  mcp_progress.py  mcp_start_all.py  mcp_status_json.py  mcp_stdio_probe.py  mcp_verify_stdio.py  run_ui.py  sentry_http_probe.mjs  sentry_token_diag.mjs  verify_apify_http.py  verify_ingest.py  verify_os_tools.sh
ui/: Dashboard.py  _bootstrap.py  _dashboard.py  app.py  http_client.py  map_layers.py  overlay_status.py  testids.py  utils.py
(+136 files in other folders)
