[project]
name = "weather-api"
version = "0.1.0"
description = "FastAPI for Weather LSA Control"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.112.2",
  "uvicorn[standard]>=0.30.5",
  "pydantic>=2.8.2",
  "pydantic-settings>=2.4.0",
  "redis>=5.0.7"
]

[project.optional-dependencies]
dev = [
  "ruff>=0.5.5",
  "pyright>=1.1.374"
]
